<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="2dp"
    android:background="@color/background"
    tools:context=".UserDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">
        <TextView
            android:id="@+id/welcomeText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/welcome1"
            android:textAllCaps="false"
            android:textColor="@color/headlines"
            android:textSize="34sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcomeText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/welcome2"
            android:textAllCaps="false"
            android:textColor="@color/headlines"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeText1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/who_am_i"
            android:textColor="@color/headlines"
            android:textAllCaps="true"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameOfUserTag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="Name:"
            app:boxStrokeColor="@color/blueDark"
            app:hintTextColor="@color/headlines"
            android:textColorHint="@color/blueDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameOfUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:backgroundTint="@color/textboxes"
                android:textColor="@color/writing"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="12dp"
            android:text="@string/gender"
            android:textColor="@color/headlines"
            android:textAllCaps="false"
            android:textSize="16sp"/>

        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="start"
            android:layout_marginBottom="80dp">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/Male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:layoutDirection="ltr"
                android:textColor="@color/headlines"
                android:buttonTint="@color/buttons"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/Female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:layoutDirection="ltr"
                android:textColor="@color/headlines"
                android:buttonTint="@color/buttons"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/Other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:layoutDirection="ltr"
                android:textColor="@color/headlines"
                android:buttonTint="@color/buttons"/>
        </RadioGroup>

        <Button
            android:id="@+id/beginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/let_s_begin"
            android:textAllCaps="false"
            android:backgroundTint="@color/buttons"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"/>

        <TextView
            android:id="@+id/privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/privacyNotice"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/headlines"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </LinearLayout>
</ScrollView>