<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TextboxActivity">

    <TextView
        android:id="@+id/textboxGreeting"
        android:layout_width="237dp"
        android:layout_height="52dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="88dp"
        android:gravity="center"
        android:text="@string/textboxGreeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textbox"
        android:layout_width="369dp"
        android:layout_height="308dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="21dp"
        android:ems="10"
        android:gravity="clip_horizontal"
        android:hint="@string/I_feel"
        android:inputType="textMultiLine|text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textboxGreeting" />

    <Button
        android:id="@+id/finishedTextbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="271dp"
        android:text="@string/finishedTextbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textbox" />
</androidx.constraintlayout.widget.ConstraintLayout>